--- a/Sass/_About.scss
+++ b/Sass/_About.scss
@@ -48,6 +48,8 @@
     text-align: left;
     color:whitesmoke;
     background:blue; 
+    transform: scale(1.1);
+    transition: 1s;
 }
 .About__button-one{
     margin-left: 100px;
