--- a/Sass/_About.scss
+++ b/Sass/_About.scss
@@ -89,7 +89,9 @@
     letter-spacing: 0.04em;
     color: aliceblue;
     background:brown;
-    border: 1px solid rgb(13, 11, 156); 
+    border: 1px solid rgb(13, 11, 156);
+    transform: scale(1.1);
+    transition: 1s; 
 }
 .About__img-one{
     width: 1200px;
