--- a/Sass/_grill.scss
+++ b/Sass/_grill.scss
@@ -53,6 +53,8 @@
     border: 1px solid blue;
     color:whitesmoke;
     background: blue;
+    transform: scale(1.1);
+    transition: 1s;
 }
 .grill__img-one{
     margin-left: 20px;
